application/frontend/kubernetes/api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microtodo-frontend-api

spec:
  selector:
    matchLabels:
      app: microtodo-frontend-api
  
  replicas: 3

  template:
    metadata:
      labels:
        app: microtodo-frontend-api
        azure.workload.identity/use: "true"

    
    spec:
      serviceAccountName: api

      containers:
      - name: microtodo-frontend-api
        image: thinkexception.azurecr.io/microtodo-frontendapi:latest
        imagePullPolicy: Always

        resources:
          limits:
            memory: "64Mi"
            cpu: "50m"
            
        ports:
        - containerPort: 80
