application/frontend/kubernetes/api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microtodo-frontend-api
spec:
  selector:
    app: microtodo-frontend-api
  ports:
  - port: 80
    targetPort: 80
